<resources>
    <string name="app_name">Home|worK</string>
    <string name="text_welcome">Login</string>
    <string name="enter">Ok</string>
    <string name="plain_text_user">Enter your user</string>
    <string name="plain_text_pass">Enter your password</string>
    <string name="text_pass_forget"> Remember password?</string>
    <string name="text_register"> Sign up</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="plain_sign_name">Enter your name</string>
    <string name="plain_sign_surname">Enter your surname</string>
    <string name="plain_sign_pass_repeat">Repeat your password</string>
    <string name="text_mail">Enter your e-mail</string>
    <string name="radio_plain_admin">Administrador</string>
    <string name="radio_plain_family">Familiar</string>
    <string name="title_activity_forgot">Recordar Contraseña</string>
    <string name="family_activity_admin">Selecciona un Familiar</string>
    <string name="title_activity_navigation_admin">NavigationAdmin</string>
    <string name="nav_header_subtitle">homerwork@gmail.com</string>
    <string name="back">Log out</string>
    <string name="first_activity">1ª Tarea:</string>
    <string name="second_activity">2ª Tarea:</string>
    <string name="action_settings">Settings</string>
    <string name="assignment_work">Asignar Tarea</string>
    <string name="menu_reports">Informe</string>
    <string name="menu_my_activity">Mis Tareas</string>
    <string name="menu_delete_family">Borrar Familiar</string>
    <string name="new_family_name">Enter family name</string>
    <string name="new_family_email">Enter family email</string>
    <string name="new_name">Name</string>
    <string name="new_email">Email</string>
    <string name="title_activity_tab_family">Home|Work Family</string>

    <string name="empty">Campo obligatorio</string>
    <string name="checked">Debe seleccionar una opción</string>
    <string name="family_surname">Enter family surname</string>
    <string name="surname">Surname</string>
    <string name="send_data">Send Data</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancel">Cancel</string>
    <string name="acept">Acept</string>
    <string name="e_mail_del_administrador">E-mail del administrador</string>
    <string name="admin_base">Admin</string>
    <string name="family_base">Family</string>
    <string name="seleciona_administrador_o_familiar">Seleciona una opción</string>
    <string name="selecciona_una_fehca">Selecciona una fecha</string>
    <string name="reports_mensuales">Informe del Mes</string>
    <string name="fecha_de_inicio">Fecha inicio</string>
    <string name="fecha_de_fin">Fecha fin</string>
    <string name="dash">-</string>
    <string name="editor_de_perfil">Editor de Perfil</string>
    <string name="contrase_a">Contraseña</string>


    <string-array name="works">
        <item>"Selecciona una tarea"</item>
        <item>"Pasear al perro"</item>
        <item>"Lavar la loza"</item>
        <item>"Poner lavadora"</item>
        <item>"Sacar la basura"</item>
        <item>"Limpiar baño"</item>
        <item>"Recoger habitación"</item>
        <item>"Limpiar el coche"</item>
    </string-array>

    <string-array name="month">
        <item>"Selecciona el mes"</item>
        <item>"Enero"</item>
        <item>"Febrero"</item>
        <item>"Marzo"</item>
        <item>"Abril"</item>
        <item>"Mayo"</item>
        <item>"Junio"</item>
        <item>"Julio"</item>
        <item>"Agosto"</item>
        <item>"Septiembre"</item>
        <item>"Octubre"</item>
        <item>"Noviembre"</item>
        <item>"Diciembre"</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="tareas_asiganadas_en_el_mes">Tareas asiganadas en el mes</string>


</resources>
