<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_newF"
            android:icon="@drawable/ic_family"
            android:title="@string/menu_delete_family" />
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_cleaning"
            android:title="@string/assignment_work" />


        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_my_activity"
            android:icon="@drawable/ic_home_work"
            android:title="@string/menu_my_activity" />

        

    </group>


</menu>
