<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_back"
        android:checkable="true"
        android:icon="@drawable/ic_logout"
        android:orderInCategory="100"
        android:title="@string/back"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_send"
        android:checkable="true"
        android:icon="@drawable/ic_incoming_mail"
        android:orderInCategory="100"
        android:title="@string/send_data"
        app:showAsAction="ifRoom" />


</menu>
