<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySignUp">

    <include
        android:id="@+id/toolbarSign"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSign"
        tools:layout_editor_absoluteX="199dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_sign"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="19dp"
                android:ems="10"
                android:hint="@string/plain_sign_name"
                android:inputType="textPersonName|textCapWords" />

            <EditText
                android:id="@+id/surname_sign"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/plain_sign_surname"
                android:inputType="textPersonName|textCapWords" />

            <EditText
                android:id="@+id/email_sign"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/text_mail"
                android:inputType="textPersonName"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/pass_sign"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/plain_text_pass"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/repeat_sign"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/plain_sign_pass_repeat"
                android:inputType="textPersonName" />

            <RadioGroup
                android:id="@+id/gruop_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/radioAdmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_plain_admin"
                    android:textColor="#465F85"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioFam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_plain_family"
                    android:textColor="#465F85"
                    android:textSize="20sp"
                    android:visibility="visible" />

            </RadioGroup>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/signOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="36dp"
                android:layout_marginStart="40dp"
                app:backgroundTint="#3B88C3"
                app:fabSize="mini"
                app:srcCompat="@mipmap/ok" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>