<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_deletef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textDeleteF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:text="@string/menu_delete_family"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerDelete"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/spinner_custom" />

        <TextView
            android:id="@+id/nameFam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:text="@string/new_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/deleteNameF"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/editext_custom"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textDsurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:text="@string/surname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/deleteSurname"
            android:layout_width="350sp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/editext_custom"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/emailFam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:text="@string/new_email"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/deleteEmailF"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/editext_custom"
            android:ems="10"
            android:enabled="false"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:clickable="true"
            app:backgroundTint="#3B88C3"
            app:fabSize="mini"
            app:srcCompat="@mipmap/ok" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>